--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -17,7 +17,7 @@
   <!-- <button (click)="sendName()" mat-fab extended>
     Send Name
   </button> -->
-</mat-toolbar>
+<!-- </mat-toolbar> -->
 <!-- <app-child (nameEmitter)="getName($event)" [childInput]="message"></app-child>
 {{myName}} -->
 <h1 class="header">Customer Manager</h1>
