--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,5 +1,5 @@
 <p>child works!</p>
-<button mat-icon-button (click) ="displayName()" class="example-icon" aria-label="Example icon-button with menu icon">Send Message</button>
+<button mat-raised-button (click) ="displayName()" >Send Message</button>
 <div>
     {{childInput}}
 </div>
