--- a/src/app/create-customer/create-customer.component.html
+++ b/src/app/create-customer/create-customer.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="form-box">
     <mat-toolbar>
       <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
@@ -9,7 +9,7 @@
         Send Name
       </button> -->
     </mat-toolbar>
-    <form class="example-form" [formGroup]="customerFormGroup">
+    <form class="form-case" [formGroup]="customerFormGroup">
       <h2>Contact Form</h2>
       <mat-form-field class="example-full-width">
         <mat-label>Name</mat-label>
