--- a/src/app/create-customer/create-customer.component.css
+++ b/src/app/create-customer/create-customer.component.css
@@ -1,4 +1,4 @@
-.form-container {
+.form-box {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -6,30 +6,30 @@
     align-items: center;
     flex-direction: column !important;
   }
-  .example-form {
-    max-width: 500px; /* adjust the width to your liking */
-    margin: auto; /* center the form horizontally */
+  .form-case {
+    max-width: 500px;
+    margin: auto; 
     padding: 50px 20px;
-    background-color: #f9f9f9; /* add a light gray background */
-    border-radius: 30px; /* add a slight rounded corner */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* add a subtle shadow */
+    background-color: white; 
+    border-radius: 20px; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
   }
   
   .example-full-width {
-    width: 100%; /* make the form fields full width */
+    width: 100%; 
   }
   
   mat-form-field {
-    margin-bottom: 20px; /* add some space between form fields */
+    margin-bottom: 20px; 
   }
   
   .example-icon {
-    margin-top: 20px; /* add some space above the save button */
+    margin-top: 20px; 
   }
   
   button {
     width: 100%;
-    background-color: blue !important;
+    background-color: purple !important;
     color: white !important;
   }
   
